--- a/source/assets/stylesheets/base/_buttons.scss
+++ b/source/assets/stylesheets/base/_buttons.scss
@@ -5,7 +5,7 @@ $_button-background-color-hover: shade($action-color, 20%);
   appearance: none;
   background-color: $_button-background-color;
   border: 0;
-  border-radius: $base-border-radius;
+  border-radius: 0;
   color: contrast-switch($_button-background-color);
   cursor: pointer;
   display: inline-block;
