--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,7 +13,7 @@
 <section class="hero">
   <section class="hero__text">
     <h1>
-      Buy your home.
+      <span class="alt-text">Buy your home.</span><br/>
       Save money by uniting your home purchase and loan together.
     </h1>
     <p>
@@ -24,7 +24,7 @@
     </p>
   </section>
 
-  <form>
+  <form class="form">
     <input name="email" placeholder="Email"></input>
     <button type="submit">Get Started</button>
   </form>
@@ -35,37 +35,58 @@
 <section class="features">
   <ul>
     <li>
-      We give you a neutral agent who will help you through the buying process 
-      and plan your loan.
+      <h3>
+        We give you a neutral agent who will help you through the buying process 
+        and plan your loan.
+      </h3>
     </li>
     <li>
-      You control your commission and pay only for the services you need.
+      <h3>
+        You control your commission and pay only for the services you need.
+      </h3>
     </li>
     <li>
-      We use our people and technology to keep transactions transparent 
-      and smooth for all parties behind the scenes.
+      <h3>
+        We use our people and technology to keep transactions transparent 
+        and smooth for all parties behind the scenes.
+      </h3>
     </li>
   </ul>
 </section>
 
+<hr />
+
 <section class="steps">
   <ol>
-    <li>Get Pre-approved </li>
-    <li>Find your dream house</li>
-    <li>Tell us what house you want to offer</li>
-    <li>Get in escrow</li>
-    <li>Close your house</li>
+    <li>
+      <p class="step__number">1</p>
+      <h4>Get Pre-approved</h4>
+    </li>
+    <li>
+      <p class="step__number">2</p>
+      <h4>Find your dream house</h4>
+    </li>
+    <li>
+      <p class="step__number">3</p>
+      <h4>Tell us what house you want to offer</h4>
+    </li>
+    <li>
+      <p class="step__number">4</p>
+      <h4>Get in escrow</h4>
+    </li>
+    <li>
+      <p class="step__number">5</p>
+      <h4>Close your house</h4>
+    </li>
   </ol>
 </section>
 
 <section class="call-to-action">
-  <form>
+  <form class="form">
     <input name="email" placeholder="Email"></input>
     <button type="submit">Get Started</button>
   </form>
 </section>
-
-<hr />
 
 <footer>
   <nav>
