Changes layout to use grid

--- a/source/assets/stylesheets/base/_variables.scss
+++ b/source/assets/stylesheets/base/_variables.scss
@@ -18,6 +18,9 @@ $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
 $primary-color: $blue;
+$yellow: #F6A10A;
+$red: #BB2D06;
+$orange: #DB692F;
 
 // Font Colors
 $base-font-color: $dark-gray;
