--- a/source/assets/stylesheets/base/_buttons.scss
+++ b/source/assets/stylesheets/base/_buttons.scss
@@ -1,7 +1,7 @@
 $_button-background-color: $action-color;
 $_button-background-color-hover: shade($action-color, 20%);
 
-#{$all-buttons} {
+#{$all-buttons}, .button {
   appearance: none;
   background-color: $_button-background-color;
   border: 0;
@@ -40,4 +40,12 @@ $_button-background-color-hover: shade($action-color, 20%);
       background-color: $_button-background-color;
     }
   }
+}
+
+.primary-button {
+  @extend.button;
+}
+
+.secondary-button {
+  @extend.button;
 }
