--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,73 +18,100 @@
     </h1>
     <p>
     We help you save big by uniting your loan and home purchase
-    and pairing you with the expertise of our neutral agents.
+    and pairing one of our neutral agents.
     </p>
   </section>
 
-  <section class="links">
-    <%= link_to 'How It Works', '#how-it-works' %>
+  <section class="learn-more">
+    <p>How does it all work?</p>
+    <%= link_to 'Learn more', '#how-it-works' %>
+  </section>
+
+  <section class="get-in-touch">
+    <p>Lets get started!</p>
     <%= link_to 'Get In Touch', '#' %>
   </section>
 </section>
 
-<hr />
-
 <section class="features" id="how-it-works">
   <ul>
-    <li>
-      <h3>
-        We give you a neutral agent who are certified experts in the loan and buying process.
-      </h3>
+    <li id="first">
+      <p>
+        We give you a neutral agent who are certified experts in the loan and 
+        buying process.
+      </p>
     </li>
-    <li>
-      <h3>
+    <li id="second">
+      <p>
         You control your money and pay only for the services you need.
-      </h3>
+      </p>
     </li>
-    <li>
-      <h3>
-        We use our people and technology to keep transactions transparent 
-        and smooth for all parties behind the scenes.
-      </h3>
+    <li id="third">
+      <p>
+      We give you back up to <strong>2%</strong> of the cost of your home in savings.
+      </p>
     </li>
   </ul>
 </section>
 
-<hr />
-
-<section class="steps">
-  <h2>What does the process look like?</h2>
-  <p>
-  From a birds eye view, our experts are there to help you navigate the pains
-  of planning a home purchase. From the loan to the legal contracts our neutral
-  agents take care of everything so you can feel at ease going through the process.
-  </p>
-  <ol>
-    <li>
-      <p class="step__number">1</p>
+<section class="benefits">
+  <section class="benefits-header">
+    <h2>What does the process look like?</h2>
+    <p>
+    Neutral agents are there to help you navigate the pains
+    of planning a home purchase. 
+    From the loan to the legal contracts our neutral
+    agents take care of everything so you can feel at ease going through 
+    the process.
+    </p>
+  </section>
+  <article class="benefit">
+    <small>1</small>
+    <section class="copy">
       <h4>Get Pre-approved</h4>
-    </li>
-    <li>
-      <p class="step__number">2</p>
+      <p>
+      An easy process that starts by setting your price range that 
+      your assigned expert will help you through
+      </p>
+    </section>
+  </article>
+  <article class="benefit">
+    <small>2</small>
+    <section class="copy">
       <h4>Find your dream house</h4>
-    </li>
-    <li>
-      <p class="step__number">3</p>
+      <p>
+      The more you do on your own, the more money you save.
+      We provide you with any services you need,
+      while saving you money on the ones you don't
+      </p>
+    </section>
+  </article>
+  <article class="benefit">
+    <small>3</small>
+    <section class="copy">
       <h4>Tell us what house you want to offer</h4>
-    </li>
-    <li>
-      <p class="step__number">4</p>
+      <p>
+      Because we help you plan your finances first, you know exactly what your
+      price range is. We help you save as much as we can closing your big deal.
+      </p>
+    </section>
+  </article>
+  <article class="benefit">
+    <small>4</small>
+    <section class="copy">
       <h4>Our experrts close your house and save you money</h4>
-    </li>
-  </ol>
-</section>
+      <p>
+      We are there to help you through the hard parts: negotiation,
+      paperwork, and financial transactions are all handled by our team with ease.
+      </p>
+    </section>
+  </article>
 
-<section class="call-to-action">
-  <form class="form">
-    <input name="email" placeholder="Email"></input>
-    <button type="submit">Get Started</button>
-  </form>
+  <section class="get-in-touch">
+    <p>Lets get started!</p>
+    <%= link_to 'Get In Touch', '#' %>
+  </section>
+
 </section>
 
 <footer>
