--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -99,10 +99,12 @@
   <article class="benefit">
     <small>4</small>
     <section class="copy">
-      <h4>Our experrts close your house and save you money</h4>
+      <h4>Our experts close your house and save you money</h4>
       <p>
       We are there to help you through the hard parts: negotiation,
       paperwork, and financial transactions are all handled by our team with ease.
+
+      At the end, we give you back up to 2% of the cost of the house.
       </p>
     </section>
   </article>
