--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -33,6 +33,32 @@
   </section>
 </section>
 
+<section class="savings-slider" id="savings-slider">
+  <section class="savings-copy">
+    <h2>Breaking down the numbers</h2>
+
+    <legend>Price of your home</legend>
+
+    <h3 id="priceValue">$500,000</h3>
+
+    <div class="slider-container">
+      <input
+         type="range"
+         min="500000"
+         max="20000000"
+         value="750000"
+         class="slider"
+         id="priceRange"
+      />
+    </div>
+
+    <legend>50% comission rebate to you</legend>
+
+    <h3 class="green" id="savings">$7,500</h3>
+  </section>
+</section>
+
+
 <section class="features" id="how-it-works">
   <ul>
     <li id="first">
