--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,8 +17,7 @@
       Save your money.
     </h1>
     <p>
-    We help you save big by uniting your loan and home purchase
-    and pairing one of our neutral agents.
+    By uniting your home purchase and loan in our single service, we can save you big. <%= link_to 'How big?', '#savings-slider' %>
     </p>
   </section>
 
@@ -45,14 +44,14 @@
       <input
          type="range"
          min="500000"
-         max="20000000"
+         max="4000000"
          value="750000"
          class="slider"
          id="priceRange"
       />
     </div>
 
-    <legend>50% comission rebate to you</legend>
+    <legend>Your savings:</legend>
 
     <h3 class="green" id="savings">$7,500</h3>
   </section>
@@ -63,18 +62,18 @@
   <ul>
     <li id="first">
       <p>
-        We give you a neutral agent who are certified experts in the loan and 
+        You get a neutral agent who is a certified expert in the loan and 
         buying process.
       </p>
     </li>
     <li id="second">
       <p>
-        You control your money and pay only for the services you need.
+        Together we plan your loan, budget and home preferences.
       </p>
     </li>
     <li id="third">
       <p>
-      We give you back up to <strong>2%</strong> of the cost of your home in savings.
+      When you buy your home you get back up to <strong>2%</strong> of the cost of your home in savings.
       </p>
     </li>
   </ul>
@@ -83,64 +82,66 @@
 <section class="benefits">
   <section class="benefits-header">
     <h2>What does the process look like?</h2>
+
     <p>
     Neutral agents are there to help you navigate the pains
-    of planning a home purchase. 
+    of planning a home purchase, not to put you under pressure to buy. 
+    </p>
+
+    <p>
     From the loan to the legal contracts our neutral
-    agents take care of everything so you can feel at ease going through 
+    agents help take care of everything so you can feel at ease going through 
     the process.
     </p>
   </section>
-  <article class="benefit">
-    <small>1</small>
-    <section class="copy">
-      <h4>Get Pre-approved</h4>
-      <p>
-      An easy process that starts by setting your price range that 
-      your assigned expert will help you through
-      </p>
-    </section>
-  </article>
-  <article class="benefit">
-    <small>2</small>
-    <section class="copy">
-      <h4>Find your dream house</h4>
-      <p>
-      The more you do on your own, the more money you save.
-      We provide you with any services you need,
-      while saving you money on the ones you don't
-      </p>
-    </section>
-  </article>
-  <article class="benefit">
-    <small>3</small>
-    <section class="copy">
-      <h4>Tell us what house you want to offer</h4>
-      <p>
-      Because we help you plan your finances first, you know exactly what your
-      price range is. We help you save as much as we can closing your big deal.
-      </p>
-    </section>
-  </article>
-  <article class="benefit">
-    <small>4</small>
-    <section class="copy">
-      <h4>Our experts close your house and save you money</h4>
-      <p>
-      We are there to help you through the hard parts: negotiation,
-      paperwork, and financial transactions are all handled by our team with ease.
+    <%= partial(
+      'benefit', 
+      locals: {
+        position: 1, 
+        header: 'Get Pre-approved',
+        copy: 'An easy process that starts by setting your price range. ' \
+              'Your assigned expert is here to help you through.'
+      }
+    ) %>
 
-      At the end, we give you back up to 2% of the cost of the house.
-      </p>
-    </section>
-  </article>
+    <%= partial(
+      'benefit', 
+      locals: {
+        position: 2, 
+        header: 'Find your dream house',
+        copy: 'We get out of the way and let you shop. The more you do yourself ' \
+              'the greater the opportunity to save on closing.'
+      }
+    ) %>
 
-  <section class="get-in-touch">
-    <p>Lets get started!</p>
-    <%= link_to 'Get In Touch', '#' %>
-  </section>
+    <%= partial(
+      'benefit', 
+      locals: {
+        position: 3, 
+        header: 'Tell us what house you want to pick',
+        copy: 'Our service helps you plan your finances first, so you know exactly ' \
+              'what your ideal price range is and how much you can offer.'
+      }
+    ) %>
+
+    <%= partial(
+      'benefit', 
+      locals: {
+        position: 4, 
+        header: 'Our experts close your house and save you money',
+        copy: 'We are here to save you from all the frustrating paperwork. ' \
+              'When the house finally closes, we ' \
+              'give you back up to 2% of the cost of the house.'
+      }
+    ) %>
 
 </section>
+
+<section class="get-in-touch call-to-action">
+  <p>Lets get started!</p>
+  <%= link_to 'Get In Touch', '#' %>
+</section>
+
 
 <footer>
   <nav>
