--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,6 +6,7 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>thoughtbot Middleman Template</title>
     <%= stylesheet_link_tag "main" %>
+    <%= javascript_include_tag '//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js', 'rangeslider', 'currency.min', 'app' %>
   </head>
   <body>
     <main role="main">
