--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -34,9 +34,9 @@
 
 <section class="savings-slider" id="savings-slider">
   <section class="savings-copy">
-    <h2>Breaking down the numbers</h2>
+    <h1>Breaking down the numbers</h1>
 
-    <legend>Price of your home</legend>
+    <legend>Price of your home:</legend>
 
     <h3 id="priceValue">$500,000</h3>
 
@@ -53,7 +53,7 @@
 
     <legend>Your savings:</legend>
 
-    <h3 class="green" id="savings">$7,500</h3>
+    <h3 class="savings-total" id="savings">$7,500</h3>
   </section>
 </section>
 
