--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -32,6 +32,26 @@
   </section>
 </section>
 
+<section class="neutrality">
+  <h2>Why Neutral?</h2>
+  <p>
+  Most Agents you meet just want you to buy anyhome. To them, there is no such 
+  thing as a bad house. <strong>The incentive structure is all wrong.</strong>
+  </p>
+
+  <p>
+  We believe in putting our skin in the game.
+  You are the expert in finding the right home, 
+  we are the expert in making sure you get the right deal for 
+  your financial situation.
+  </p>
+
+  <p>
+  Since we are the lender putting up a loan for your property we need to 
+  make sure your purchase is right for your unique financial circumstances. 
+  </p>
+</section>
+
 <section class="savings-slider" id="savings-slider">
   <section class="savings-copy">
     <h2>Breaking down the numbers</h2>
@@ -62,18 +82,19 @@
   <ul>
     <li id="first">
       <p>
-        You get a neutral agent who is a certified expert in the loan and 
-        buying process.
+      You work with a neutral agent who is a licensed and certified in loans 
+      and real estate.
       </p>
     </li>
     <li id="second">
       <p>
-        Together we plan your loan, budget and home preferences.
+      We back you with the right financial data on every house that interests you.
       </p>
     </li>
     <li id="third">
       <p>
-      When you buy your home you get back up to <strong>2%</strong> of the cost of your home in savings.
+      When you buy your home you get back up to <strong>2%</strong> of the 
+      cost of your home in savings.
       </p>
     </li>
   </ul>
@@ -83,24 +104,15 @@
   <section class="benefits-header">
     <h2>What does the process look like?</h2>
 
-    <p>
-    Neutral agents are there to help you navigate the pains
-    of planning a home purchase, not to put you under pressure to buy. 
-    </p>
-
-    <p>
-    From the loan to the legal contracts our neutral
-    agents help take care of everything so you can feel at ease going through 
-    the process.
-    </p>
   </section>
     <%= partial(
       'benefit', 
       locals: {
         position: 1, 
-        header: 'Get Pre-approved',
+        header: 'Plan your finances',
         copy: 'An easy process that starts by setting your price range. ' \
-              'Your assigned expert is here to help you through.'
+              'It both helps you stand out from competition and make better decisions. ' \
+              'Your assigned agent is here to help you through.'
       }
     ) %>
 
@@ -109,8 +121,9 @@
       locals: {
         position: 2, 
         header: 'Find your dream house',
-        copy: 'We get out of the way and let you shop. The more you do yourself ' \
-              'the greater the opportunity to save on closing.'
+        copy: 'Search online and visit open houses. ' \
+        "Any house you can't get into, we will pair you with an on field showing agent. " \
+        "If you don't use any services we save you the money when you close."
       }
     ) %>
 
@@ -118,9 +131,10 @@
       'benefit', 
       locals: {
         position: 3, 
-        header: 'Tell us what house you want to pick',
-        copy: 'Our service helps you plan your finances first, so you know exactly ' \
-              'what your ideal price range is and how much you can offer.'
+        header: 'Tell us what house you are thinking of buying',
+        copy: 'Your neutral agent is primed with financing, appraisal, and real ' \
+        'estate knowledge to make sure you have the most competitive offer. ' \
+        'We help you save as much as we can when closing your deal.'
       }
     ) %>
 
@@ -131,7 +145,8 @@
         header: 'Our experts close your house and save you money',
         copy: 'We are here to save you from all the frustrating paperwork. ' \
               'When the house finally closes, we ' \
-              'give you back up to 2% of the cost of the house.'
+              'give you back up to 2% of the cost of the house that can go towards ' \
+              'reducing your purchase price or other home finances.'
       }
     ) %>
 
