--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -35,8 +35,9 @@
 <section class="neutrality">
   <h2>Why Neutral?</h2>
   <p>
-  Most Agents you meet just want you to buy anyhome. To them, there is no such 
-  thing as a bad house. <strong>The incentive structure is all wrong.</strong>
+  Most Agents you meet just want you to buy any home so they can get paid. 
+  To them, there is no such thing as a bad house. 
+  <strong>The incentive structure is all wrong.</strong>
   </p>
 
   <p>
