--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -33,24 +33,26 @@
 </section>
 
 <section class="neutrality">
-  <h2>Why Neutral?</h2>
-  <p>
-  Most Agents you meet just want you to buy any home so they can get paid. 
-  To them, there is no such thing as a bad house. 
-  <strong>The incentive structure is all wrong.</strong>
-  </p>
+  <section>
+    <h2>Why Neutral?</h2>
+    <p>
+    Most Agents you meet just want you to buy any home so they can get paid. 
+    To them, there is no such thing as a bad house. 
+    <strong>The incentive structure is all wrong.</strong>
+    </p>
 
-  <p>
-  We believe in putting our skin in the game.
-  You are the expert in finding the right home, 
-  we are the expert in making sure you get the right deal for 
-  your financial situation.
-  </p>
+    <p>
+    We believe in putting our skin in the game.
+    You are the expert in finding the right home, 
+    we are the expert in making sure you get the right deal for 
+    your financial situation.
+    </p>
 
-  <p>
-  Since we are the lender putting up a loan for your property we need to 
-  make sure your purchase is right for your unique financial circumstances. 
-  </p>
+    <p>
+    Since we are the lender putting up a loan for your property we need to 
+    make sure your purchase is right for your unique financial circumstances. 
+    </p>
+  </section>
 </section>
 
 <section class="savings-slider" id="savings-slider">
