--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,24 +1,9 @@
-<header>
-  <figure class="logo">
-    <%= image_tag 'logo.png', id: 'logo' %>
-  </figure>
-
-  <nav>
-    <ul>
-      <li><%= link_to 'Contact Us', '#' %></li>
-    </ul>
-  </nav>
-</header>
-
 <section class="hero">
   <section class="hero__text">
     <h1>
-      <span class="alt-text">Buy your home.</span><br/>
-      Save your money.
+      By uniting your home purchase and loan in our single service, we can save you big. 
+      <%= link_to 'How big?', '#savings-slider' %>
     </h1>
-    <p>
-    By uniting your home purchase and loan in our single service, we can save you big. <%= link_to 'How big?', '#savings-slider' %>
-    </p>
   </section>
 
   <section class="learn-more">
