--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,6 +9,7 @@
     <%= javascript_include_tag '//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js', 'rangeslider', 'currency.min', 'app' %>
   </head>
   <body>
+    <%= partial "partials/navigation" %>
     <main role="main">
       <%= yield %>
     </main>
