--- a/source/assets/stylesheets/base/_forms.scss
+++ b/source/assets/stylesheets/base/_forms.scss
@@ -2,17 +2,58 @@ $_form-background-color: #fff;
 $_form-box-shadow: inset 0 1px 3px rgba(#000, 0.06);
 $_form-box-shadow-focus: $_form-box-shadow, 0 0 5px rgba($action-color, 0.7);
 
+form#mc-embedded-subscribe-form {
+  padding: $base-spacing;
+  max-width: 975px;
+  display: block;
+  margin: 5vh auto;
+
+  h1 {
+    color: $action-color;
+    margin-bottom: $small-spacing;
+  }
+
+  section.contact-info {
+    margin-bottom: $base-spacing;
+  }
+
+  input.button {
+    margin: $base-spacing auto;
+    display: block;
+    border-radius: $base-spacing;
+  }
+}
+
+section.form-inputs {
+  @media screen and (min-width: $large-screen) {
+    display: flex;
+    flex-flow: row nowrap;
+
+    fieldset#contact-info {
+      margin-right: $small-spacing;
+    }
+
+    fieldset#financial-info {
+      margin-left: $small-spacing;
+    }
+  }
+}
+
+
 fieldset {
   background-color: transparent;
   border: 0;
   margin: 0;
   padding: 0;
+  flex: 1;
 }
 
 legend {
   font-weight: 600;
   margin-bottom: $small-spacing / 2;
   padding: 0;
+  opacity: 0.7;
+  text-transform: uppercase;
 }
 
 label {
