Fixes links and typography of main header

--- a/source/assets/stylesheets/main.css.scss
+++ b/source/assets/stylesheets/main.css.scss
@@ -85,6 +85,12 @@ section.hero {
     max-width: calc($large-screen - $base-spacing);
     min-height: 40vh;
 
+    h1 {
+      color: $dark-gray;
+      max-width: $large-screen;
+      display: block;
+      margin: 0 auto;
+    }
 
     p {
       line-height: 2;
