--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,7 +13,7 @@
 
   <section class="get-in-touch">
     <p>Lets get started!</p>
-    <%= link_to 'Get In Touch', '#' %>
+    <%= link_to 'Get In Touch', 'contact' %>
   </section>
 </section>
 
@@ -141,7 +141,7 @@
 
 <section class="get-in-touch call-to-action">
   <p>Lets get started!</p>
-  <%= link_to 'Get In Touch', '#' %>
+  <%= link_to 'Get In Touch', 'contact' %>
 </section>
 
 
@@ -151,7 +151,7 @@
       <li><%= link_to 'Terms and Conditions', '#' %></li>
       <li><%= link_to 'Facebook', '#' %></li>
       <li><%= link_to 'Instagram', '#' %></li>
-      <li><%= link_to 'Contact Us', '#' %></li>
+      <li><%= link_to 'Contact Us', 'contact' %></li>
     </ul>
   </nav>
 </footer>
