--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -82,7 +82,7 @@
   <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_35c18cdbd246edc5e19338917_f5087813a0" tabindex="-1" value=""></div>
     <div class="clear">
       <input type="submit"
-            value="Subscribe"
+            value="Submit"
             name="subscribe"
             id="mc-embedded-subscribe"
             class="button" />
