--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,8 +1,8 @@
 <section class="contact-us">
 <form action="https://internuncio.us18.list-manage.com/subscribe/post?u=35c18cdbd246edc5e19338917&amp;id=f5087813a0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-<h1>Let's get your prequalified</h1>
+<h1>Let's have a chat!</h1>
 <section class="contact-info">
-  <p>Contact us anytime at:</p>
+  <h3>Fill out your information below or contact us anytime at:</h3>
   <p><strong>Phone:</strong> (818) 470-1481</p>
   <p><strong>Email:</strong> pkhoury@firstamericanwl.com</p>
 </section>
