--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>thoughtbot Middleman Template</title>
+    <title>Neutral Party</title>
     <%= stylesheet_link_tag "main" %>
     <%= javascript_include_tag '//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js', 'rangeslider', 'currency.min', 'app' %>
   </head>
