--- a/source/assets/stylesheets/_typography.scss
+++ b/source/assets/stylesheets/_typography.scss
@@ -27,16 +27,29 @@ html {
 }
 
 h1 {
-  font-size: 3.375em;
+  font-size: 2.074em;
+  font-weight: 400;
+
+  @media screen and (min-width: $large-screen) {
+    font-size: 2.488em;
+  }
 }
 
 h2 {
-  font-size: 2.25em;
+  font-size: 1.728em;
+
+  @media screen and (min-width: $large-screen) {
+    font-size: 2.074em;
+  }
 }
 
 h3 {
-  font-size: 1.5em;
+  font-size: 1.44em;
   color: lighten($base-font-color, 15);
+
+  @media screen and (min-width: $large-screen) {
+    font-size: 1.728em;
+  }
 }
 
 
