--- a/source/assets/stylesheets/base/_variables.scss
+++ b/source/assets/stylesheets/base/_variables.scss
@@ -13,7 +13,7 @@ $small-spacing: $base-spacing / 2;
 $base-z-index: 0;
 
 // Colors
-$blue: #1565c0;
+$blue: #495AFF;
 $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
