--- a/source/partials/_navigation.html.erb
+++ b/source/partials/_navigation.html.erb
@@ -1,6 +1,6 @@
 <header>
   <figure class="logo">
-    <%= image_tag 'logo.png', id: 'logo' %>
+    <%= image_tag 'neutral-party-logo.png', id: 'logo' %>
   </figure>
 
   <nav>
