Changes contact information

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -4,7 +4,7 @@
 <section class="contact-info">
   <h3>Fill out your information below or contact us anytime at:</h3>
   <p><strong>Phone:</strong> (818) 470-1481</p>
-  <p><strong>Email:</strong> pkhoury@firstamericanwl.com</p>
+  <p><strong>Email:</strong> hello@theneutralparty.com</p>
 </section>
 
 <section class="form-inputs">
