--- a/source/assets/stylesheets/main.css.scss
+++ b/source/assets/stylesheets/main.css.scss
@@ -93,6 +93,7 @@ section.hero {
       max-width: $large-screen;
       display: block;
       margin: 0 auto;
+      text-shadow: 1px 1px 7px black;
     }
 
     p {
